# apex-legends-ocr-data

./: .gitignore  000908-001578.csv  001922-002588.csv  002015-002680.csv  003093-003780.csv  005236-005890.csv  006348-007006.csv  007565-008185.csv  2021-03-27_965657358.000835-001500.csv  2021-03-27_965657358.004178-004846.csv  2021-03-27_965657358.players.txt  2021-03-27_965657358.txt  2021-03-28_966453340.003144-003795.csv  2021-03-28_966453340.players.txt  README.md  analyze.ipynb  player_names.txt  process.py  pyproject.toml  read.ipynb  streams.txt  weapons.txt
data/: 2021-03-28_966453340.004238-004879.csv  2021-03-28_966453340.005286-005934.csv  2021-03-28_966453340.006396-007075.csv  2021-03-28_966453340.players.txt  2021-03-28_966453340.txt
