[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Remi Rampin <remi@rampin.org>"]

[tool.poetry.dependencies]
python = "^3.7"
ipykernel = "^5.5.0"
Pillow = "^8.1.2"
scikit-learn = "^0.24.1"
pytesseract = "^0.3.7"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
